// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it overrides expected resources 1`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "createTest",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "MutationcreateTestinit0FunctionMutationcreateTestinit0FunctionAppSyncFunction82753130",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationcreateTestpreAuth0FunctionMutationcreateTestpreAuth0FunctionAppSyncFunctionC0EB74A1",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationCreateTestDataResolverFnMutationCreateTestDataResolverFnAppSyncFunction005BA3A1",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Mutation\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"createTest\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "TestTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 25))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 2`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "getTest",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpreAuth0FunctionQuerygetTestpreAuth0FunctionAppSyncFunction7DE868FF",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QueryGetTestDataResolverFnQueryGetTestDataResolverFnAppSyncFunctionCB6458E5",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Query\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"getTest\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "TestTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 25))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 3`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "listTests",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerylistTestspreAuth0FunctionQuerylistTestspreAuth0FunctionAppSyncFunction3CA4A90C",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QueryListTestsDataResolverFnQueryListTestsDataResolverFnAppSyncFunction177A117F",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Query\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"listTests\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "TestTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 25))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 4`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "deleteTest",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "MutationdeleteTestpreAuth0FunctionMutationdeleteTestpreAuth0FunctionAppSyncFunctionC68C5724",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationDeleteTestDataResolverFnMutationDeleteTestDataResolverFnAppSyncFunction9230CF9A",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Mutation\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"deleteTest\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "TestTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 25))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 5`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "updateTest",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "MutationupdateTestinit0FunctionMutationupdateTestinit0FunctionAppSyncFunctionC2375285",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationcreateTestpreAuth0FunctionMutationcreateTestpreAuth0FunctionAppSyncFunctionC0EB74A1",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "MutationUpdateTestDataResolverFnMutationUpdateTestDataResolverFnAppSyncFunction161162F8",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Mutation\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"updateTest\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "TestTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 25))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Mutation",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 6`] = `
Object {
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "FieldName": "syncTests",
    "Kind": "PIPELINE",
    "PipelineConfig": Object {
      "Functions": Array [
        Object {
          "Fn::GetAtt": Array [
            "QuerysyncTestspreAuth0FunctionQuerysyncTestspreAuth0FunctionAppSyncFunction6F326BAB",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerygetTestpostAuth0FunctionQuerygetTestpostAuth0FunctionAppSyncFunctionE9BFAF7A",
            "FunctionId",
          ],
        },
        Object {
          "Fn::GetAtt": Array [
            "QuerySyncTestsDataResolverFnQuerySyncTestsDataResolverFnAppSyncFunction95B4DA0E",
            "FunctionId",
          ],
        },
      ],
    },
    "RequestMappingTemplate": Object {
      "Fn::Join": Array [
        "",
        Array [
          "$util.qr($ctx.stash.put(\\"typeName\\", \\"Query\\"))
$util.qr($ctx.stash.put(\\"fieldName\\", \\"syncTests\\"))
$util.qr($ctx.stash.put(\\"conditions\\", []))
$util.qr($ctx.stash.put(\\"metadata\\", {}))
$util.qr($ctx.stash.metadata.put(\\"dataSourceType\\", \\"AMAZON_DYNAMODB\\"))
$util.qr($ctx.stash.metadata.put(\\"apiId\\", \\"",
          Object {
            "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"connectionAttributes\\", {}))
$util.qr($ctx.stash.put(\\"tableName\\", \\"",
          Object {
            "Ref": "TestTable",
          },
          "\\"))
$util.qr($ctx.stash.put(\\"deltaSyncTableTtl\\", 25))
$util.qr($ctx.stash.put(\\"adminRoles\\", []))
$util.toJson({})",
        ],
      ],
    },
    "ResponseMappingTemplate": "$util.toJson($ctx.prev.result)",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`it overrides expected resources 7`] = `
Object {
  "DependsOn": Array [
    "TestIAMRoleB964910C",
  ],
  "Properties": Object {
    "ApiId": Object {
      "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
    },
    "DynamoDBConfig": Object {
      "AwsRegion": Object {
        "Ref": "AWS::Region",
      },
      "DeltaSyncConfig": Object {
        "BaseTableTTL": "20",
        "DeltaSyncTableName": "TestTable",
        "DeltaSyncTableTTL": "25",
      },
      "TableName": Object {
        "Ref": "TestTable",
      },
      "Versioned": true,
    },
    "Name": "TestTable",
    "ServiceRoleArn": Object {
      "Fn::GetAtt": Array [
        "TestIAMRoleB964910C",
        "Arn",
      ],
    },
    "Type": "AMAZON_DYNAMODB",
  },
  "Type": "AWS::AppSync::DataSource",
}
`;
